--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,16 +2,16 @@ cmake_minimum_required(VERSION 3.10)
 project(SimpleNES)
 
 if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
-      "Choose the type of build, options are: Debug Release."
-      FORCE)
+    set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+        "Choose the type of build, options are: Debug Release."
+        FORCE)
 endif(NOT CMAKE_BUILD_TYPE)
 
 set(BUILD_STATIC FALSE CACHE STRING "Set this to link external libraries statically")
 
 if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
-        set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -g")
-        set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -Wextra -g")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
 endif()
 
 # Add directory containing FindSFML.cmake to module path
@@ -45,7 +45,8 @@ function(define_file_basename_for_sources targetname)
 endfunction()
 
 # Specify include Directory
-include_directories("${PROJECT_SOURCE_DIR}/include")
+include_directories("${PROJECT_SOURCE_DIR}/include"
+                  "E:/workSpase/MyDll/SFML-2.6.2-windows-vc17-64-bit/include")
 
 # Set static if BUILD_STATIC is set
 if (BUILD_STATIC)
@@ -57,28 +58,28 @@ if (BUILD_STATIC)
 endif()
 
 # Find SFML
+set(SFML_DIR "E:/workSpase/MyDll/SFML-2.6.2-windows-vc17-64-bit/lib/cmake/SFML")
+set(CMAKE_PREFIX_PATH "${CMAKE_PREFIX_PATH};E:/workSpase/MyDll/SFML-2.6.2-windows-vc17-64-bit")
 if (SFML_OS_WINDOWS AND SFML_COMPILER_MSVC)
-    find_package( SFML 2 COMPONENTS main audio graphics window system REQUIRED)
+    find_package(SFML 2.6 COMPONENTS main audio graphics window system REQUIRED)
 else()
-    find_package( SFML 2 COMPONENTS audio graphics window system REQUIRED)
-endif()
-
-if(SFML_FOUND)
-        include_directories(${SFML_INCLUDE_DIR})
-else()
-        set(SFML_ROOT "" CACHE PATH "SFML top-level directory")
-        message("\nSFML directory not found. Set SFML_ROOT to SFML's top-level path (containing \"include\" and \"lib\" directories).")
-        message("Make sure the SFML libraries with the same configuration (Release/Debug, Static/Dynamic) exist.\n")
+    find_package(SFML 2.6 COMPONENTS audio graphics window system REQUIRED)
 endif()
 
 # generate compile commands for clangd
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 add_executable(SimpleNES ${SOURCES})
-target_link_libraries(SimpleNES ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
-
 set_property(TARGET SimpleNES PROPERTY CXX_STANDARD 11)
 set_property(TARGET SimpleNES PROPERTY CXX_STANDARD_REQUIRED ON)
 
-target_link_libraries(SimpleNES)
+if(SFML_FOUND)
+    message(STATUS "Found SFML: ${SFML_VERSION}")
+    link_directories("E:/workSpase/MyDll/SFML-2.6.2-windows-vc17-64-bit/lib")
+    target_link_libraries(SimpleNES ${SFML_LIBRARIES} ${SFML_DEPENDENCIES})
+else()
+    message(FATAL_ERROR "\nSFML directory not found. Set SFML_ROOT to SFML's top-level path (containing \"include\" and \"lib\" directories).")
+    message("Make sure the SFML libraries with the same configuration (Release/Debug, Static/Dynamic) exist.\n")
+endif()
+
 define_file_basename_for_sources(SimpleNES)
